fix: remove visibility hidden for .lazy class images
It was preventing the images from showing when the service worker was registered

--- a/css/custom.css
+++ b/css/custom.css
@@ -70,7 +70,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 .lazy:not([src]):not([srcset]) {
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 
 input,
